--- a/README.org
+++ b/README.org
@@ -1,25 +1,48 @@
 * x-to-openai-api-adapter
 
-This is a Cloudflare worker that acts as an adapter to proxy requests to the [[https://platform.openai.com/docs/guides/gpt/chat-completions-api][OpenAI Chat Completions API]] to other AI services like Claude, Azure OpenAI, and Google Palm.
+This is a Cloudflare worker that acts as an adapter to proxy requests to the
+[[https://platform.openai.com/docs/guides/gpt/chat-completions-api][OpenAI Chat Completions API]] to other AI services like Claude, Azure OpenAI, and
+Google Palm.
+
+This project draws inspiration from, and is based on, the work of
+[[https://github.com/haibbo/cf-openai-azure-proxy][haibbo/cf-openai-azure-proxy]]. If you only require a single service proxy (such
+as Claude/Azure), please consider using the original project. This project,
+however, is more complex and is specifically designed to accommodate multiple
+services.
+
+#+begin_ai markdown :model gpt-4 :temperature 0.5
+[SYS]: You're a native en-us speaker who is also an expert in Emacs Org mode.
+
+[ME]: Grammar fix and polish the following text in Org mode:
+This project is inspired and based on the work of [[https://github.com/haibbo/cf-openai-azure-proxy][haibbo/cf-openai-azure-proxy]],
+If you just need a single service proxy(Claude/Azure), just use the original project. This project is more complex and designed for multiple services.
+
+
+[AI]: This project draws inspiration from, and is based on, the work of [[https://github.com/haibbo/cf-openai-azure-proxy][haibbo/cf-openai-azure-proxy]]. If you only require a single service proxy (such as Claude/Azure), please consider using the original project. This project, however, is more complex and is specifically designed to accommodate multiple services.
+
+[ME]:
+#+end_ai
 
 ** Overview
 
-The worker allows you to make requests to the OpenAI API format and seamlessly redirect them under the hood to other services. This provides a unified API interface and abstraction layer across multiple AI providers.
+The worker allows you to make requests to the OpenAI API format and seamlessly
+redirect them under the hood to other services. This provides a unified API
+interface and abstraction layer across multiple AI providers.
 
-*Key features*:
+*** Key Features
 
 - *Single endpoint to access multiple AI services*;
+- Chat to *Multiple models* in a single request;
 - Unified request/response format using the OpenAI API;
 - Auto handles streaming responses;
 - Single API key for authentication;
 - Support for OpenAI, Claude, Azure OpenAI, and Google Palm;
-- *Multiple models supported*;
-
 
 
 ** Usages
 
-To use the adapter, simply make requests to the worker endpoint with the OpenAI JSON request payload.
+To use the adapter, simply make requests to the worker endpoint with the OpenAI
+JSON request payload.
 
 Behind the scenes the worker will:
 
@@ -50,9 +73,9 @@ To use =claude-2=:
 
 #+begin_src json :exports both
 {
-  "model": "claude-2",
+	"model": "claude-2",
 	"stream": true,
-  "messages": [...]
+	"messages": [...]
 }
 #+end_src
 
@@ -61,15 +84,17 @@ You can specify *multiple models* (delimitered by ~,~) to query in parallel:
 
 #+begin_src json :exports both
 {
-  "model": "gpt-3.5-turbo,claude-2",
+	"model": "gpt-3.5-turbo,claude-2",
 	"stream": true,
-  "messages": [...]
+	"messages": [...]
 }
 #+end_src
 
-The response will contain the concatenated output from both models streamed in the OpenAI API format.
+The response will contain the concatenated output from both models streamed in
+the OpenAI API format.
 
-Other OpenAI parameters like `temperature`, `stream`, `stop` etc. can also be specified normally.
+Other OpenAI parameters like `temperature`, `stream`, `stop` etc. can also be
+specified normally.
 
 *** Python Example
 
@@ -79,14 +104,17 @@ import openai
 openai.api_key = "<your specified API_KEY>"
 openai.api_base = "<your worker endpoint>/v1"
 
-# The local wrangler development endpoint
+# For example, the local wrangler development endpoint
 # openai.api_key = 'sk-fakekey'
 # openai.api_base = "http://127.0.0.1:8787/v1"
 
 chat_completion = openai.ChatCompletion.create(
     model="gpt-4,claude-2",
     messages=[
-        {"role": "user", "content": "A brief introduction about yourself and say hello"}
+        {
+            "role": "user",
+            "content": "A brief introduction about yourself and say hello!",
+        }
     ],
     stream=True,
 )
@@ -99,14 +127,20 @@ for chunk in chat_completion:
 
 ** The /X/ (API Services supported)
 
-- [x] OpenAI
-- [x] Azure OpenAI
-- [x] Claude
-- [x] Google Palm
+*** [X] OpenAI
+CLOSED: [2023-07-18 Tue 21:08]
+*** [X] Azure OpenAI
+CLOSED: [2023-07-18 Tue 21:09]
+*** [X] Claude
+CLOSED: [2023-07-18 Tue 21:09]
+*** [X] Google Palm
+CLOSED: [2023-07-18 Tue 21:09]
 
 ** The /models/ suported
 
 Here are the models currently supported by the adapter service:
+
+To use a particular model, specify its ID in the `model` field of the request body.
 
 *** OpenAI Models:
 
@@ -117,7 +151,11 @@ Here are the models currently supported by the adapter service:
 - gpt-4
 - gpt-4-0613
 
-*** Azure OpenAI Models(Depends on your deployment name):
+*** Azure OpenAI Models(Depending on your deployment name):
+
+/For example, the following models are the deployment names from my azure openai service./
+
+You'll have to update the [[file:./src/models.ts]] for your own deployment names.
 
 - gpt-35-turbo
 - gpt-35-turbo-16k
@@ -132,9 +170,6 @@ Here are the models currently supported by the adapter service:
 - text-bison-001
 - chat-bison-001
 
-To use a particular model, specify its ID in the `model` field of the request body.
-
-Let me know if you need any other models added! I tried to include the major publicly available models relevant for chat/text completion.
 
 ** Deployment
 
@@ -176,6 +211,39 @@ Worker -> Settings -> Variables -> Environment Variables
 #+begin_src sh :exports both :wrap src sh :results raw replace
 wrangler depoly
 #+end_src
+
+** TODO List
+
+*** [ ] Fix handle claude stream
+*** [ ] Handle multiple models merge JSON?
+:LOGBOOK:
+- State "[ ]"        from              [2023-07-18 Tue 21:10]
+:END:
+*** [ ] Error handling
+:LOGBOOK:
+- State "[ ]"        from              [2023-07-18 Tue 21:17]
+:END:
+*** [ ] Refactor the proxy.ts to different files
+:LOGBOOK:
+- State "[ ]"        from              [2023-07-18 Tue 21:25]
+:END:
+*** [ ] A generic way to configure the Azure OpenAI models
+:LOGBOOK:
+- State "[ ]"        from              [2023-07-18 Tue 21:22]
+:END:
+
+*** [ ] Mutiple API_KEYs support
+:LOGBOOK:
+- State "[ ]"        from              [2023-07-18 Tue 21:09]
+:END:
+- Config multiple API_KEYs
+- Maybe specify different key by the model?
+- Maybe retriable for the same model with different keys?
+*** [ ] A basic metric API/dashboard
+:LOGBOOK:
+- State "[ ]"        from              [2023-07-18 Tue 21:10]
+:END:
+
 
 ** Development
 
